# fujisan_viewshed

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  referenced_sources.csv
.github/workflows/: deploy.yml
deployment/: README.md  SETUP.md
deployment/terraform/: main.tf  outputs.tf  variables.tf
pipeline/: build_tile_index.py  constants.py  defaults.py  download_dem.py  fetch_mountains.py  generate_pmtiles.py  viewshed.py
pipeline/utils/: dem_decode.py  geojson.py  s3_tiles.py  tiles.py
scripts/: upload-data.sh
web/: next.config.ts  package-lock.json  package.json
web/public/data/: fuji_viewshed.pmtiles  mountains.geojson
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: Map.tsx
