[project]
name = "fujisan-viewshed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.87",
    "duckdb>=1.5.1",
    "gdal==3.12.2",
    "geopandas>=1.1.3",
    "numpy>=2.4.3",
    "requests>=2.32.5",
    "tqdm>=4.66",
]
